# flagsmith-rust-client

./: .release-please-manifest.json  CHANGELOG.md  Cargo.toml  LICENSE  README.md  fastly.unit-test.toml  release-please-config.json
.cargo/: config.toml  nextest.toml
.github/workflows/: publish-cargo-package.yml
example/: Cargo.toml  Rocket.toml  readme.md
example/src/: main.rs
example/templates/: home.html.tera
scripts/: fastly-unit-test.sh  test.sh
src/: error.rs  lib.rs
src/flagsmith/: analytics.rs  mod.rs  models.rs  offline_handler.rs
src/flagsmith/client/: blocking_client.rs  client.rs  fastly_client.rs  mod.rs
tests/: integration_test.rs
tests/fixtures/: environment.json  mod.rs
