[package]
name = "flagsmith"
version = "0.1.0"
authors = ["Gagan Trivedi <gagan.trivedi@flagsmith.com>"]
edition = "2021"
license = "BSD-3-Clause"
description = "Flagsmith SDK for Rust"
homepage = "https://flagsmith.com/"
repository = "https://github.com/Flagsmith/flagsmith-rust-client"
readme = "README.md"
categories = ["config", "api-bindings"]
keywords = ["Flagsmith", "feature-flag", "remote-config"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
url = "2.1"
flagsmith-flag-engine ={path="/home/gagan/Flag/flagsmith-rust-flag-engine"}
chrono = { version = "0.4"}
log = "0.4"