[package]
name = "flagsmith"
version = "1.0.0"
authors = ["Tomasz Zdybał <tomek@zdybal.lap.pl>"]
edition = "2018"
license = "BSD-3-Clause"
description = "Flagsmith SDK for Rust"
homepage = "https://flagsmith.com/"
repository = "https://github.com/Flagsmith/flagsmith-rust-client"
readme = "README.md"
categories = ["config", "api-bindings"]
keywords = ["Flagsmith", "feature-flag", "remote-config"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "^0.10", features = ["blocking","json"] }
url = "2.1"
